--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
       <plugin>
         <groupId>org.eclipse.jkube</groupId>
         <artifactId>kubernetes-maven-plugin</artifactId>
-        <version>1.6.0-SNAPSHOT</version>
+        <version>1.7.0</version>
         <configuration>
           <helm>
             <parameters>
