--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <description>Demo project for Spring Boot and JKube</description>
   <properties>
     <java.version>17</java.version>
+    <jkube.version>1.11.0</jkube.version>
     <jkube.createExternalUrls>true</jkube.createExternalUrls>
     <applicationPort>8082</applicationPort>
   </properties>
@@ -38,7 +39,7 @@
       <plugin>
         <groupId>org.eclipse.jkube</groupId>
         <artifactId>kubernetes-maven-plugin</artifactId>
-        <version>1.7.0</version>
+        <version>${jkube.version}</version>
         <configuration>
           <helm>
             <parameters>
