--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.0</version>
+    <version>3.1.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>com.marcnuri.demo.jkube</groupId>
@@ -44,6 +44,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse.jkube</groupId>
+      <artifactId>${jkube.artifactId}</artifactId>
+      <version>${jkube.version}</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -58,6 +63,7 @@
         <version>${jkube.version}</version>
         <configuration>
           <helm>
+            <chart>oci-helm-test</chart>
             <parameters>
               <parameter>
                 <name>deployment.replicas</name>
